@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.39 2005/01/15 19:37:27 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.40 2005/01/15 19:39:00 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
@@ -9,6 +9,11 @@
   USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
   and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
   CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES.
+
+  15 Jan 2005; John Laliberte <allanonl@bu.edu>
+  Networking.py - added support for a custom ethernet device.
+  Fixed a lot of little bugs having to do with user interaction,
+  and added support for loading from the .xml file.
 
   14 Jan 2005; John Laliberte <allanonl@bu.edu>
   Timezone.py - fixed bug where after selecting a timezone, it would jump
